# mylibfive

./: .gitignore  CMakeLists-old.txt  CMakeLists.txt
libfive/: CMakeLists.txt
libfive/src/render/brep/: mesh.cpp
libfive/test/: main.cpp
